[gd_scene load_steps=20 format=3 uid="uid://bsbtrwk8vrcl2"]

[ext_resource type="Script" path="res://scripts/actors/player.gd" id="1_3eg61"]
[ext_resource type="Texture2D" uid="uid://dk0is1og1bykj" path="res://assets/kenney_pixel-shmup/Ships/ship_0009.png" id="2_jcm6v"]
[ext_resource type="Animation" uid="uid://bkhkprtrj1e3g" path="res://res/anim/impact.res" id="3_d7bg4"]
[ext_resource type="Texture2D" uid="uid://c0c767lu0np3f" path="res://assets/bubbles.png" id="3_l47wc"]
[ext_resource type="AudioStream" uid="uid://cfpbd2ep0o4kf" path="res://assets/sfx/sfx_explosion.wav" id="4_vlnkb"]
[ext_resource type="Animation" uid="uid://b3s2jhap22vrt" path="res://res/anim/explode.res" id="4_yu2rl"]

[sub_resource type="Gradient" id="Gradient_ck2sm"]
colors = PackedColorArray(1, 1, 1, 0.411765, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y7qbu"]
gradient = SubResource("Gradient_ck2sm")
width = 16

[sub_resource type="Curve" id="Curve_y1dbg"]
max_value = 3.0
_data = [Vector2(0, 2.03636), 0.0, 0.0, 0, 0, Vector2(1, 0.681818), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7gvq4"]
width = 32
curve = SubResource("Curve_y1dbg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqwmh"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 94.74
initial_velocity_max = 94.74
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_7gvq4")
color_ramp = SubResource("GradientTexture1D_y7qbu")

[sub_resource type="Gradient" id="Gradient_3ldnx"]
offsets = PackedFloat32Array(0.377778, 0.8, 1)
colors = PackedColorArray(0.621524, 0.621524, 0.621524, 0.933333, 0.226708, 0.226707, 0.226708, 0.692641, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m2m2j"]
gradient = SubResource("Gradient_3ldnx")
width = 12

[sub_resource type="Curve" id="Curve_w3ifp"]
_data = [Vector2(0, 0.727273), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_c8f41"]
width = 32
curve = SubResource("Curve_w3ifp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6240j"]
lifetime_randomness = 0.07
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 31.74
initial_velocity_max = 63.16
angular_velocity_min = -45.47
angular_velocity_max = 75.79
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_max = 12.63
angle_min = -363.8
angle_max = 378.9
scale_curve = SubResource("CurveTexture_c8f41")
color_ramp = SubResource("GradientTexture1D_m2m2j")
attractor_interaction_enabled = false

[sub_resource type="CircleShape2D" id="CircleShape2D_dtlpc"]

[sub_resource type="Animation" id="Animation_rwvb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jcm6v")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShadowHolder:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AirStream:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AirStream2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Smoke:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Explode:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_onj4a"]
_data = {
"RESET": SubResource("Animation_rwvb4"),
"explode": ExtResource("4_yu2rl"),
"impact": ExtResource("3_d7bg4")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 8
motion_mode = 1
script = ExtResource("1_3eg61")

[node name="ShadowHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Shadow" type="Sprite2D" parent="ShadowHolder"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.380392)
z_index = -1
z_as_relative = false
position = Vector2(-16, 18)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_jcm6v")

[node name="AirStream" type="GPUParticles2D" parent="."]
position = Vector2(-13, 3)
amount = 12
process_material = SubResource("ParticleProcessMaterial_tqwmh")
lifetime = 0.2
trail_enabled = true
trail_sections = 3
trail_section_subdivisions = 2

[node name="AirStream2" type="GPUParticles2D" parent="."]
position = Vector2(13, 3)
amount = 12
process_material = SubResource("ParticleProcessMaterial_tqwmh")
lifetime = 0.2
trail_enabled = true
trail_sections = 3
trail_section_subdivisions = 2

[node name="Smoke" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
process_material = SubResource("ParticleProcessMaterial_6240j")
texture = ExtResource("3_l47wc")
lifetime = 0.25

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jcm6v")

[node name="Gun" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-7, -8)

[node name="Gun2" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(7, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_dtlpc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="FireTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vlnkb")
bus = &"Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_onj4a")
}

[connection signal="timeout" from="FireTimer" to="." method="_fire_bullets"]
